# aplicativos

./: README.md
saude_java/: settings.gradle
saude_java/app/: build.gradle
saude_java/app/src/main/java/saude_java/: Aluno.java  IMC.java  PG.java  RCQ.java  TMB.java
saude_java/app/src/test/java/saude_java/: AlunoTest.java  IMCTest.java  PGTest.java  RCQTest.java  TMBTest.java
saude_javascript/: package-lock.json  package.json
saude_javascript/lib/: aluno.js  imc.js  pg.js  rcq.js  tmb.js
saude_javascript/tests/: aluno.test.js  imc.test.js  pg.test.js  rcq.test.js  tmb.test.js
saude_php/: composer.json
saude_php/src/SaudePhp/: IMC.php  PG.php  RCQ.php  TMB.php
saude_php/tests/: IMCTest.php  PGTest.php  RCQTest.php  TMBTest.php
saude_python/: pyproject.toml
saude_python/src/saude_python/: aluno.py  imc.py  pg.py  rcq.py  tmb.py
saude_python/tests/saude_python/: test_aluno.py  test_imc.py  test_pg.py  test_rcq.py  test_tmb.py
saude_ruby/: Gemfile  README.md  saude_ruby.gemspec
saude_ruby/lib/: saude_ruby.rb
saude_ruby/lib/saude_ruby/: aluno.rb  imc.rb  pg.rb  rcq.rb  tmb.rb  version.rb
saude_ruby/sig/: saude_ruby.rbs
saude_ruby/spec/: saude_ruby_spec.rb  spec_helper.rb
